rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__filter_contains_string.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
customers__name | orders__count
----------------+--------------
Alice Cooper    | 2            
Alice Johnson   | 2
