rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__filter_equals_multiple_values.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__count
-------------
8
