rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__filter_not_equals_string.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__count | orders__total_amount
--------------+---------------------
4             | 190.00
