rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__measure_filter_having.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__status | orders__count
---------------+--------------
completed      | 5            
pending        | 3
